# whichdisk

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  cobertura.xml  rustfmt.toml  tarpaulin-report.json
.github/workflows/: ci.yml  coverage.yml  loc.yml
src/: bsd.rs  capabilities_tests.rs  lib.rs  linux.rs  main.rs  netbsd.rs  windows.rs
tests/: cli.rs
