[package]
name = "whichdisk"
version = "0.0.0"
edition = "2024"
repository = "https://github.com/al8n/whichdisk"
homepage = "https://github.com/al8n/whichdisk"
documentation = "https://docs.rs/whichdisk"
description = "Cross-platform disk/volume resolver — given a path, tells you which disk it's on, its mount point, and the relative path"
license = "MIT OR Apache-2.0"
rust-version = "1.85"
keywords = ["disk", "volume", "filesystem", "mount point"]


[[bench]]
path = "benches/foo.rs"
name = "foo"
harness = false

[features]
default = ["std"]
alloc = []
std = []

[dependencies]

[dev-dependencies]
criterion = "0.8"
tempfile = "3"

[profile.bench]
opt-level = 3
debug = false
codegen-units = 1
lto = 'thin'
incremental = false
debug-assertions = false
overflow-checks = false
rpath = false

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints.rust]
rust_2018_idioms = "warn"
single_use_lifetimes = "warn"
unexpected_cfgs = { level = "warn", check-cfg = [
  'cfg(all_tests)',
  'cfg(tarpaulin)',
] }
