[package]
name = "whichdisk"
version = "0.0.0"
edition = "2024"
repository = "https://github.com/al8n/whichdisk"
homepage = "https://github.com/al8n/whichdisk"
documentation = "https://docs.rs/whichdisk"
description = "Cross-platform disk/volume resolver — given a path, tells you which disk it's on, its mount point, and the relative path"
license = "MIT OR Apache-2.0"
rust-version = "1.85"
categories = ["filesystem", "os", "development-tools"]
keywords = ["disk", "volume", "mount", "path", "filesystem"]

[features]
default = []
cli = ["clap", "serde", "serde_json", "yaml-rust2"]

[[bin]]
name = "whichdisk"
required-features = ["cli"]

[target.'cfg(unix)'.dependencies]
rustix = { version = "1", features = ["fs"] }
memchr = { version = "2", default-features = false }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = ["Win32_Storage_FileSystem"] }

[dependencies]
bytes = "1"
clap = { version = "4", features = ["derive"], optional = true }
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }
yaml-rust2 = { version = "0.11", optional = true }

[dev-dependencies]
assert_cmd = "2"
criterion = "0.8"
predicates = "3"
tempfile = "3"

[profile.bench]
opt-level = 3
debug = false
codegen-units = 1
lto = 'thin'
incremental = false
debug-assertions = false
overflow-checks = false
rpath = false

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints.rust]
rust_2018_idioms = "warn"
single_use_lifetimes = "warn"
unexpected_cfgs = { level = "warn", check-cfg = [
  'cfg(all_tests)',
  'cfg(tarpaulin)',
] }
